@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+phoromatic: Add a "email all users" option to the rootadmin page
+
 Phoronix Test Suite 8.0.0 Milestone 3
 16 April 2018
 
